<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/register_and_login" />
        <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="@string/profile" />-->

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/search_by_national_code" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/search_by_name" />
    </group>


    <item android:title="@string/Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/contact_us" />
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/tubeless_app_list" />
        </menu>
    </item>

</menu>
