<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fb_background_color"
    android:orientation="vertical"
    android:textDirection="rtl"
    android:padding="20dp"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/contact_us"
        android:textColor="#4267b2"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="130dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_search"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:drawablePadding="15dp"

            android:textDirection="locale"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:hint="@string/mobile_number"
            android:padding="16dp" />
        <EditText
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:textDirection="locale"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:background="@drawable/bg_search"
            android:drawableLeft="@android:drawable/ic_dialog_email"
            android:drawablePadding="15dp"
            android:hint="@string/text"
            android:padding="16dp" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_search"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>