<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/fb_background_color"
        android:orientation="vertical"
        android:textDirection="rtl"
        android:padding="20dp"
        android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="22dp"
            android:gravity="center_horizontal"
            android:text="@string/search_by_national_code"
            android:textColor="#4267b2"
            android:textSize="26sp"
            android:textStyle="bold" />


    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="130dp">

        <EditText
                android:id="@+id/editTextNationalCode"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="locale"
                android:gravity="start"
                android:inputType="number"
                android:textAlignment="viewStart"
                android:background="@drawable/bg_search"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:drawablePadding="15dp"
                android:hint="@string/national_code"
                android:padding="16dp" />
        <TextView
                android:id="@+id/textViewSearchByName"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:layout_marginTop="50dp"
                android:textColor="#4267b2"
                android:text="@string/search_by_name" />


    </LinearLayout>


    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >


        <Button
            android:id="@+id/button_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_search"
            android:text="@string/searchRequest"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

    </LinearLayout>


</RelativeLayout>
