<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fb_background_color"
                android:orientation="vertical"
                android:textDirection="rtl"
                android:padding="20dp"
                android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="22dp"
            android:gravity="center_horizontal"
            android:text="@string/not_found"
            android:textColor="#4267b2"
            android:textSize="26sp"
            android:textStyle="bold" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="100dp">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_delete"/>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_weight="1">


        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_search"
            android:text="@string/countinue"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_search"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>
