<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fb_background_color"
    android:orientation="vertical"
    android:textDirection="rtl"
    android:padding="20dp"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/reg"
        android:textColor="#4267b2"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="130dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_search"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:drawablePadding="15dp"
                android:textDirection="locale"
                android:gravity="start"
                android:layout_weight="0.7"
                android:textAlignment="viewStart"
                android:padding="16dp" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_search"
                android:text="camera"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_search"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:drawablePadding="15dp"
                android:textDirection="locale"
                android:gravity="start"
                android:layout_weight="0.7"
                android:textAlignment="viewStart"
                android:padding="16dp" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_search"
                android:text="pay"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_search"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:drawablePadding="15dp"
            android:hint="text"
            android:textDirection="locale"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:padding="16dp" />
        <EditText
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="locale"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:background="@drawable/bg_search"
                android:drawableLeft="@android:drawable/ic_dialog_email"
                android:drawablePadding="15dp"
                android:hint="@string/text"
                android:padding="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingTop="5dp"
            android:textColor="#4267b2"
            android:text="@string/help" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_search"
            android:text="@string/reg"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>